dataset1235/2025-2/2868285114/users/2502343884/executions/3071719669_2249045874.log
== SUBMISSION (2025-08-28 22:55:31)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input("lados:")
apot1 = (2*math.tan (math.pi/8))
apot2 = lado/apot1
area = 4*lado*2*tan(pi/8)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:16)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input("lados:")
apot1 = (2*math.tan (math.pi/8))
apot2 = lado/apot1
area = 4*lado*apot2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:55:34)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input("lados:")
apot1 = (2*math.tan (math.pi/8))
apot2 = lado/apot1
area = 4*lado*2*tan(pi/8)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:17)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input("lados:")
apot1 = (2*math.tan (math.pi/8))
apot2 = lado/apot1
area = 4*lado*apot2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:56:59)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input("lados:"))
apot1 = (2*math.tan (math.pi/8))
apot2 = lado/apot1
area = 4*lado*apot2
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
---- user output:
lados:77.25
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
---- user output:
lados:309.02
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
---- user output:
lados:120.71
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
---- user output:
lados:120.71
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
---- user output:
lados:391.1
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
---- user output:
lados:173.82
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 22:55:35)
-- CODE: 
from math import *

# faça seu código aqui!
import math
lado = float(input("lados:")
apot1 = (2*math.tan (math.pi/8))
apot2 = lado/apot1
area = 4*lado*2*tan(pi/8)
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
77.25
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
8
---- correct output:
309.02
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
5
---- correct output:
120.71
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
9
---- correct output:
391.1
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6
---- correct output:
173.82
-- ERROR:
File "XXXX", line 5
    lado = float(input("lados:")
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
